[package]
name = "redstone-computer-utilities"
version = "0.3.0"
edition = "2024"

[dependencies]
macros = { path = "./macros" }
thiserror = "2.0"
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = "0.27"
tracing = "0.1"
futures = "0.3"
strum = { version = "0.27", features = ["derive"] }
trait-set = "0.3.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
